Update player names to include GitHub links

--- a/index.html
+++ b/index.html
@@ -594,11 +594,20 @@
             <div class="header-glow"></div>
             <h1>Daily Coding Tracker</h1>
             <div class="subtitle">
-                <span class="player ray">Ray</span>
+                <span class="player ray">
+                  <a href="https://github.com/cosalt" target="_blank" rel="noopener">Ray</a>
+                </span>
                 <span style="color: #666;">vs</span>
-                <span class="player hayden">Hayden</span>
+                
+                <span class="player hayden">
+                  <a href="https://github.com/Electricmantaray" target="_blank" rel="noopener">Hayden</a>
+                </span>
                 <span style="color: #666;">vs</span>
-                <span class="player arthur">Arthur</span>
+                
+                <span class="player arthur">
+                  <a href="https://github.com/arthurstevens" target="_blank" rel="noopener">Arthur</a>
+                </span>
+
             </div>
         </header>
 
